# korotagger

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  docker-compose.yaml  entrypoint.sh  readme.md
migrations/: 0001_init.sql  0002_member.sql  0003_member.sql  0004_offset_end.sql
src/: auto_chooks.rs  auto_stream_live.rs  bili.rs  command_grammer.pest  command_parsing.rs  db_util.rs  help_text.rs  i_love_youtube.rs  main.rs  message_formatting.rs  permissions.rs  server_settings.rs  twitch.rs  util.rs  video_id.rs
src/auto_live/: channel_watch.rs  holodex.rs  mod.rs  twitter_spaces.rs
src/handlers/: config.rs  histogram.rs  jank.rs  mod.rs  streams.rs  tagging.rs  test_handler.rs
src/members/: bg_task.rs  gentai.rs  handlers.rs  mod.rs  sync.rs
src/util/: mod.rs  server_state.rs
