[package]
name = "korotagger"
version = "0.1.0"
authors = ["ryan <yarnnd@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discord_lib = { path = "./discord_lib" }
async-trait = "0.1.36"

lazy_static = "1.4.0"
rustbreak = { version = "=2.0.0-rc3", features = ["ron_enc"] }

# gluesql = { version = "0.1.16", features = ["sled-storage"] }
# sqlparser = { version = "*", features = ["serde"] }

futures = "0.3"
tokio = { version = "1", features = ["time", "rt", "rt-multi-thread"] }

# sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "runtime-tokio-rustls", "macros", "chrono", "time", "tls", "postgres", "migrate" ] }
sqlx = { version = "0.7.3", default-features = false, features = [ "runtime-tokio", "runtime-tokio-rustls", "tls-rustls", "macros", "chrono", "postgres", "migrate" ] }
# time = "0.2.22"
# refinery = { version = "0.3.0", features = ["tokio-postgres", "tokio", "postgres"] }
# refinery = { git = "https://github.com/rust-db/refinery.git", rev="a97c2571eb0562dc92c32fe9d40d76361fa8035c", features = ["tokio-postgres", "tokio", "postgres"] }
# barrel = { version = "0.6.5", features = ["pg"] }

serde = "^1"
serde_json = "1.0.32"
chrono = { version = "0.4", features = ["serde", "now"] }
# chrono-tz = "0.5.2"
csv = "1.1"
url = "2.2.2"
linkify = "0.8.0"

anyhow = "1.0"

# scraper = "0.12.0"

pest = "2.1.3"
pest_derive = "2.1.0"

reqwest = { version = "0.11.23", features = [] }
